@@ -53,6 +53,7 @@ $strAlterOrderBy = 'Endre tabellrekkefølge ved';
 $strAnalyze = 'Analyser';
 $strAnalyzeTable = 'Analyser tabell';
 $strAnd = 'og';
+$strAndSmall = 'og';
 $strAndThen = 'og så';
 $strAngularLinks = 'Vinklede linker';
 $strAnIndex = 'En indeks har blitt lagt til %s';
@@ -162,6 +163,7 @@ $strCompleteInserts = 'Komplette innlegg';
 $strCompression = 'Kompresjon';
 $strCompressionWillBeDetected = 'Komprimering av importerte filer vil bli automatisk oppdaget fra: %s';
 $strConfigDefaultFileError = 'Kunne ikke laste standard konfigurasjonsfil fra: "%1$s"';
+$strConfigDirectoryWarning = 'Mappe [code]config[/code], som blir brukt av setupskriptet eksisterer fortsatt i din phpMyAdmin mappe. Du bør fjerne den så fort phpMyAdming har blitt konfigurert.';
 $strConfigFileError = 'phpMyAdmin kunne ikke lese din konfigurasjonsfil!<br />Dette kan skje hvis PHP finner en syntaksfeil eller ikke kan finne filen.<br />Vennligst kall opp konfigurasjonsfilen direkte via linken under og les PHP feilmeldingen(e) som du vil få. I de fleste tilfeller så mangler det et anførselstegn eller et semikolon et sted.<br />Hvis du får en blank side så er alt ok.';
 $strConfigureTableCoord = 'Vennligst konfigurer koordinatene for tabell %s';
 $strConnectionError = 'Kan ikke koble til: ugyldige innstillinger.';
@@ -189,6 +191,7 @@ $strCreateTable  = 'Opprett tabell';
 $strCreateUserDatabase = 'Brukerdatabase';
 $strCreateUserDatabaseName = 'Opprett database med samme navn og gi alle rettigheter';
 $strCreateUserDatabaseNone = 'Ingen';
+$strCreateUserDatabasePrivileges = 'Gi alle privilegier for databasen &quot;%s&quot;';
 $strCreateUserDatabaseWildcard = 'Gi alle rettigheter på jokertegnavn (username\_%)';
 $strCreationDates = 'Opprettelse/Oppdaterings/Kontrolldato';
 $strCriteria = 'Kriterier';
@@ -249,6 +252,7 @@ $strDisplayFeat = 'Vis egenskaper';
 $strDisplayOrder = 'Visningsrekkefølge:';
 $strDisplayPDF = 'Vis PDF-skjema';
 $strDoAQuery = 'Utfør en "spørring ved eksempel" (jokertegn: "%")';
+$strDoNotAutoIncrementZeroValues = 'Ikke bruk AUTO_INCREMENT for nullverdier';
 $strDocSQL = 'DocSQL';
 $strDocu = 'Dokumentasjon';
 $strDownloadFile = 'Last ned fil';
@@ -284,6 +288,7 @@ $strErrorRelationAdded = 'Feil: Relasjon ikke opprettet.';
 $strErrorRelationExists = 'Feil: relasjoner eksisterer allerede.';
 $strErrorRenamingTable = 'Feil oppstond med endring av tabellnavn fra %1$s til %2$s';
 $strErrorSaveTable = 'Feil oppstod under lagring av Designerkoordinater.';
+$strEscapeCRLF = 'Fjern CRLF tegn i felter';
 $strEscapeWildcards = 'Jokertegnene _ og % må beskyttes med en \ for å bruke dem direkte';
 $strEsperanto = 'Esperanto';
 $strEstonian = 'estisk';
@@ -335,6 +340,7 @@ $strGeneralRelationFeat = 'Generelle relasjonsegenskaper';
 $strGenerate = 'Generer';
 $strGeneratePassword = 'Generer passord';
 $strGenTime = 'Generert den';
+$strGetMoreThemes = 'Få flere temaer!';
 $strGeorgian = 'Georgisk';
 $strGerman = 'tysk';
 $strGlobal = 'global';
@@ -358,6 +364,7 @@ $strHome = 'Hjem';
 $strHomepageOfficial = 'Offisiell phpMyAdmin-hjemmeside';
 $strHost = 'Vert';
 $strHostEmpty = 'Vertsnavnet er tomt!';
+$strHostTableExplanation = 'Når vertstabellen er brukt så ignoreres dette feltet og verdier lagret i vertstabellen blir brukt istedet.';
 $strHTMLExcel = 'Microsoft Excel 2000';
 $strHTMLWord = 'Microsoft Word 2000';
 $strHungarian = 'ungarsk';
@@ -452,6 +459,7 @@ $strLocalhost = 'Lokal';
 $strLocationTextfile = 'Plassering av filen';
 $strLogin = 'Logg inn';
 $strLoginInformation = 'Innlogingsinformasjon';
+$strLoginWithoutPassword = 'Innlogging uten passord er forbudt av konfigurasjonen (see AllowNoPassword)';
 $strLogout = 'Logg ut';
 $strLogPassword = 'Passord:';
 $strLogServer = 'Tjener';
@@ -519,6 +527,7 @@ $strNoIndex = 'Ingen indeks definert!';
 $strNoIndexPartsDefined = 'Ingen indeksdeler definert!';
 $strNoModification = 'Ingen endring';
 $strNone = 'Ingen';
+$strNoneDefault = 'Ingen';
 $strNoOptions = 'Dette formatet har ingen valg';
 $strNoPassword = 'Intet passord';
 $strNoPermission = 'Webserveren har ikke tillatelse til å lagre fila %s.';
@@ -709,6 +718,10 @@ $strRepairTable = 'Reparer tabell';
 $strReplaceNULLBy = 'Erstatt NULL med';
 $strReplaceTable = 'Erstatt tabell med filen';
 $strReplication = 'Replikering';
+$strReplicationStatus = 'Replikasjonsstatus';
+$strReplicationStatusInfo = 'Denne MySQL tjeneren som %s i <b>replikasjon<b>sprosess. For mer informasjon om replikasjonsstatusen for tjeneren, gå til <a href="#replication">replikasjonsseksjonen</a>.';
+$strReplicationStatus_master = 'Masterstatus';
+$strReplicationStatus_slave = 'Slavestatus';
 $strReset = 'Tøm skjema';
 $strResourceLimits = 'Ressursbegrensninger';
 $strRestartInsertion = 'Restarte innsettinga med %s rader';
@@ -775,6 +788,7 @@ $strServerTabVariables = 'Variabler';
 $strServerTrafficNotes = '<b>Tjenertraffikk</b>: Disse tabellene viser statistikk over nettverkstrafikken for denne MySQL-tjeneren siden dens oppstart.';
 $strServerVars = 'Tjenervariabler og -innstillinger';
 $strServerVersion = 'Tjenerversjon';
+$strSessionGCWarning = 'Ditt PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] er lavere enn cookie gyldighet konfigurert i phpMyAdmin, på grunn av dette så vil din innlogging utløpe raskere enn konfigurert i phpMyAdmin.';
 $strSessionStartupErrorGeneral = 'Kan ikke starte sessjonen uten feil, kontroller feilmeldinger i din PHP og/eller webtjenerloggfil og konfigurer din PHP innstallasjon korrekt.';
 $strSessionValue = 'Økts verdi';
 $strSetEnumVal = 'Hvis felttypen er "enum" eller "set", skriv inn verdien med dette formatet: \'a\',\'b\',\'c\'...<br />Hvis du skulle trenge å ha en skråstrek ("\") eller en enkel apostrof ("\'") blant disse verdiene, skriv en skråstrek foran (eks. \'\\\\xyz\' eller \'a\\\'b\').';
@@ -893,6 +907,7 @@ $strSetupForm_Export_defaults = 'Eksportinnstillinger';
 $strSetupForm_Export_defaults_desc = 'Endre standard eksportinnstillinger';
 $strSetupForm_Query_window = 'Spørringsvindu';
 $strSetupForm_Query_window_desc = 'Endre spørringsvinduinnstillinger';
+$strSetupServerNoPasswordMsg = 'Du tillater tilkobling til tjeneren uten passord.';
 $strSetupServers_verbose_name = 'Fult navn for denne tjeneren';
 $strSetupServers_host_name = 'Tjenervertsnavn';
 $strSetupServers_port_name = 'Tjenerport';
@@ -925,6 +940,8 @@ $strSetupServers_only_db_name = 'Vis kun opplistede databaser';
 $strSetupServers_only_db_desc = 'Du kan bruke MySQL jokertegn (% and _), escape dem hvis du ønsker å bruke dem direkte, f.eks. bruk \'my\_db\' og ikke \'my_db\'';
 $strSetupServers_hide_db_name = 'Skul databaser';
 $strSetupServers_hide_db_desc = 'Skjul databaser som matcher regular expression (PCRE)';
+$strSetupServers_host_desc = 'Vertsnavn hvor MySQL tjeneren kjører';
+$strSetupServers_verbose_desc = 'En brukervennlig beskrivelse av denne tjeneren. La stå tom for visning av vertsnavn istedet.';
 $strSetupServers_AllowRoot_name = 'Tillat innlogging som root';
 $strSetupServers_DisableIS_name = 'Slå av bruk av INFORMATION_SCHEMA';
 $strSetupServers_DisableIS_desc = 'Mer informasjon på [a@http://sf.net/support/tracker.php?aid=1849494]PMA bug tracker[/a] og [a@http://bugs.mysql.com/19588]MySQL Bugs[/a]';
@@ -932,6 +949,7 @@ $strSetupServers_AllowDeny_order_name = 'Rekkefølge for vertsautentisering';
 $strSetupServers_AllowDeny_order_desc = 'La stå tom hvis ikke brukt';
 $strSetupServers_AllowDeny_rules_name = 'Vertsautentiseringsregler';
 $strSetupServers_AllowDeny_rules_desc = 'La stå tom for standard';
+$strSetupServers_AllowNoPassword_name = 'Tillat innlogging uten passord';
 $strSetupServers_ShowDatabasesCommand_name = 'SHOW DATABASES kommando';
 $strSetupServers_ShowDatabasesCommand_desc = 'SQL kommando for å hente liste over databaser';
 $strSetupServers_CountTables_name = 'Tell tabeller';
@@ -1126,6 +1144,8 @@ $strSetupExport_file_template_database_name = 'Databasenavnmal';
 $strSetupExport_file_template_server_name = 'Tjenernavnmal';
 $strShow = 'Vis';
 $strShowAll = 'Vis alle';
+$strShowBinaryContents = 'Vis binært innhold';
+$strShowBLOBContents = 'Vis BLOB innhold';
 $strShowColor = 'Vis farger';
 $strShowDatadictAs = 'Data Ordbok Format';
 $strShowFullQueries = 'Vis hele spørringen';
@@ -1265,6 +1285,7 @@ $strSorting = 'Sortering';
 $strSpaceUsage = 'Plassbruk';
 $strSpanish = 'Spansk';
 $strSplitWordsWithSpace = 'Ord er separert med et mellomrom (" ").';
+$strStatic = 'statisk';
 $strSQL = 'SQL';
 $strSQLCompatibility = 'SQL kompatibilitetsmodus';
 $strSQLExportType = 'Eksporttype';
@@ -1437,25 +1458,4 @@ $strYes = 'Ja';
 $strZeroRemovesTheLimit = 'Merk: Ved å sette disse til 0 (null) fjernes begrensningen.';
 $strZip = 'Komprimert (zip)';
 
-$strSessionGCWarning = 'Your PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] is lower that cookie validity configured in phpMyAdmin, because of this, your login will expire sooner than configured in phpMyAdmin.';  //to translate
-$strSetupServers_host_desc = 'Hostname where MySQL server is running';  //to translate
-$strSetupServers_verbose_desc = 'A user-friendly description of this server. Leave blank to display the hostname instead.';  //to translate
-$strCreateUserDatabasePrivileges = 'Grant all privileges on database &quot;%s&quot;';  //to translate
-$strShowBinaryContents = 'Show binary contents';  //to translate
-$strShowBLOBContents = 'Show BLOB contents';  //to translate
-$strStatic = 'static';  //to translate
-$strLoginWithoutPassword = 'Login without a password is forbidden by configuration (see AllowNoPassword)';  //to translate
-$strSetupServerNoPasswordMsg = 'You allow for connecting to the server without a password.';  //to translate
-$strSetupServers_AllowNoPassword_name = 'Allow logins without a password';  //to translate
-$strHostTableExplanation = 'When Host table is used, this field is ignored and values stored in Host table are used instead.';  //to translate
-$strGetMoreThemes = 'Get more themes!';  //to translate
-$strNoneDefault = 'None';  //to translate
-$strConfigDirectoryWarning = 'Directory [code]config[/code], which is used by the setup script, still exists in your phpMyAdmin directory. You should remove it once phpMyAdmin has been configured.';  //to translate
-$strEscapeCRLF = 'Remove CRLF characters within fields';  //to translate
-$strDoNotAutoIncrementZeroValues = 'Do not use AUTO_INCREMENT for zero values';  //to translate
-$strAndSmall = 'and';  //to translate
-$strReplicationStatus = 'Replication status';  //to translate
-$strReplicationStatusInfo = 'This MySQL server works as %s in <b>replication</b> process. For further information about replication status on the server, please visit the <a href="#replication">replication section</a>.';  //to translate
-$strReplicationStatus_master = 'Master status';  //to translate
-$strReplicationStatus_slave = 'Slave status';  //to translate
 ?>
